# RAAHI

./: LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
YOLO_X_GAZEBO/: README.md
YOLO_X_GAZEBO/helios_control/: README.md
YOLO_X_GAZEBO/helios_description/: README.md
YOLO_X_GAZEBO/helios_gazebo/: README.md
YOLO_X_GAZEBO/helios_recognition/: README.md
YOLO_X_Gazebo/: README.md
YOLO_X_Gazebo/install/: local_setup.sh  setup.sh
YOLO_X_Gazebo/install/helios_control/share/helios_control/: local_setup.sh  package.sh
YOLO_X_Gazebo/log/: latest_build
YOLO_X_Gazebo/src/helios_description/launch/: spawn_helios_launch.launch.py
YOLO_X_Gazebo/src/helios_description/robot/: helios.urdf
helios_one/: CMakeLists.txt  README.md  package.xml
helios_one/config/: frames_2024-10-21_14.43.45.gv  main.rviz  mapper_params_online_async.yaml  my_controllers.yaml
helios_one/description/: camera.xacro
helios_one/launch/: ball_tracker.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  rsp.launch.py
helios_one/worlds/: office_small_empty.world  office_small_new.world  one.world  one_2.world  yolo_test.world
helios_recognition/scripts/: yolov8_ros2_pt.py  yolov8_ros2_subscriber.py
helios_recognition/scripts/archives/: yolov8_ros2_pt.py
prompt_sender/: CMakeLists.txt  package.xml
prompt_sender/launch/: prompt_sender_sim.launch.py
prompt_sender/scripts/: prompt_sender.py
ros2_llm/launch/: ros2_llm.launch.py
yolov8_msgs/msg/: InferenceResult.msg
(+23 files in other folders)
